# Tapasco

./: setup.sh
arch/tests/debug-screens/: AtsPriScreen.hpp
common/: common_2016.4.tcl  common_ip.tcl
common/ip/BlueDMA/: component.xml
common/ip/BlueDMA/src/: mkBlueDMAVivado.v
common/ip/HSA/HSAWrapper/: component.xml
common/ip/HSA/HSAWrapper/src/: mkAQLQueueFetcher.v  mkHSAWrapper.v
examples/hsa/: CMakeLists.txt  hsa.cpp  hsa_dma.h  hsa_types.h
examples/image_processing/: CMakeLists.txt  hsa_aql_queue.h  hsa_types.h  imgproc.cpp
json-examples/hsa/: ats.json  bluedma.json  hsa.json
platform/vc709/: vc709.tcl
platform/vc709/module/: Makefile  char_device_dma.c  char_device_hsa.c  char_device_hsa.h  dma_ctrl.c  ffLink_driver.c  ffLink_driver.h  hotplug.sh  pcie_device.c  pcie_device.h
platform/vc709/module/common/: device_hsa.h  device_hsa_dma.h
platform/vc709/plugins/: blue-dma.tcl  dual-dma.tcl  hsa-infrastructure.tcl
